FilePanel: save panel state on quit.

TFilePanel has its own SaveState(), but it is not called
when quitting BFilePanel. This may help #17374.

Change-Id: I2c9791094e5447b0b8a249e6328ccb2a4bf12c60